test/integration/bad/embedded_laplace/stanc.expected
  $ ../../../../../install/default/bin/stanc autodiff_incompatibility1.stan
Semantic error in 'autodiff_incompatibility1.stan', line 57, column 29 to column 40:
   -------------------------------------------------
    55:  model {
    56:  
    57:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    58:                                    theta_0,
    59:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

The function 'algebra_solver', called by this likelihood function,
does not currently support higher-order derivatives, and
cannot be used in an embedded Laplace approximation.
[exit 1]
  $ ../../../../../install/default/bin/stanc autodiff_incompatibility2.stan
Semantic error in 'autodiff_incompatibility2.stan', line 60, column 43 to column 54:
   -------------------------------------------------
    58:  
    59:  generated quantities {
    60:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
                                                    ^
    61:                          theta_0,
    62:                          K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

The function 'ode_rk45', called by this likelihood function,
does not currently support higher-order derivatives, and
cannot be used in an embedded Laplace approximation.
[exit 1]
  $ ../../../../../install/default/bin/stanc autodiff_incompatibility3.stan
Semantic error in 'autodiff_incompatibility3.stan', line 52, column 43 to column 54:
   -------------------------------------------------
    50:  
    51:  generated quantities {
    52:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
                                                    ^
    53:                          theta_0,
    54:                          K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

The function 'reduce_sum', called by this likelihood function,
does not currently support higher-order derivatives, and
cannot be used in an embedded Laplace approximation.
[exit 1]
  $ ../../../../../install/default/bin/stanc autodiff_incompatibility4.stan
Semantic error in 'autodiff_incompatibility4.stan', line 51, column 43 to column 54:
   -------------------------------------------------
    49:  
    50:  generated quantities {
    51:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
                                                    ^
    52:                          theta_0,
    53:                          K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

The function 'reduce_sum', called by this likelihood function,
does not currently support higher-order derivatives, and
cannot be used in an embedded Laplace approximation.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback1.stan
Semantic error in 'bad_callback1.stan', line 37, column 29 to column 40:
   -------------------------------------------------
    35:  }
    36:  model {
    37:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    38:                                    theta_0,
    39:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Function 'll_function' does not have a valid signature for use in 'laplace_marginal':
Expected function returning real but got function returning void.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback2.stan
Semantic error in 'bad_callback2.stan', line 39, column 29 to column 49:
   -------------------------------------------------
    37:  }
    38:  model {
    39:    target += laplace_marginal(ll_function_jacobian, (eta, log_ye, y),
                                      ^
    40:                                    theta_0,
    41:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Function 'll_function_jacobian' does not have a valid signature for use in 'laplace_marginal':
Expected a pure function but got a _jacobian function.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback3.stan
Semantic error in 'bad_callback3.stan', line 29, column 29 to column 40:
   -------------------------------------------------
    27:  model {
    28:    real ll_function;
    29:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    30:                                    theta_0,
    31:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

A returning function was expected but a non-function value 'll_function' was supplied.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback4.stan
Semantic error in 'bad_callback4.stan', line 38, column 29 to column 40:
   -------------------------------------------------
    36:  model {
    37:  
    38:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    39:                                    theta_0,
    40:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Function 'll_function' does not have a valid signature for use in 'laplace_marginal':
The first argument is marked data-only. (Local variables are assumed to
depend on parameters; same goes for function inputs unless they are marked
with the keyword 'data'.)
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback5.stan
Semantic error in 'bad_callback5.stan', line 38, column 29 to column 40:
   -------------------------------------------------
    36:  }
    37:  model {
    38:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    39:                                    theta_0,
    40:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Function 'll_function' does not have a valid signature for use in 'laplace_marginal':
The first argument must be vector but got complex_vector.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward1.stan
Semantic error in 'bad_forward1.stan', line 38, column 42 to column 47:
   -------------------------------------------------
    36:  model {
    37:  
    38:    target += laplace_marginal(ll_function, {2.0},
                                                   ^
    39:                                    theta_0,
    40:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Forwarded arguments to 'll_function' in call to 'laplace_marginal' must be a tuple.
Instead found type array[] real.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward2.stan
Semantic error in 'bad_forward2.stan', line 38, column 42 to column 58:
   -------------------------------------------------
    36:  model {
    37:  
    38:    target += laplace_marginal(ll_function, (eta, y, log_ye),
                                                   ^
    39:                                    theta_0,
    40:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Cannot call 'll_function' with arguments forwarded from call to
'laplace_marginal':
The second argument (excluding the latent gaussian vector argument) must be
vector but got array[] int.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward3.stan
Semantic error in 'bad_forward3.stan', line 37, column 42 to column 50:
   -------------------------------------------------
    35:  }
    36:  model {
    37:    target += laplace_marginal(ll_function, (eta, y),
                                                   ^
    38:                                    theta_0,
    39:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Cannot call 'll_function' with arguments forwarded from call to
'laplace_marginal':
Expected 3 arguments (excluding the latent gaussian vector argument)
but got 2 arguments.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward4.stan
Semantic error in 'bad_forward4.stan', line 39, column 46 to column 71:
   -------------------------------------------------
    37:    target += laplace_marginal(ll_function, (eta, log_ye, y),
    38:                                    theta_0,
    39:                                    K_function, (x, alpha, rho, rho, rho));
                                                       ^
    40:  }
   -------------------------------------------------

Cannot call 'K_function' with arguments forwarded from call to
'laplace_marginal':
Expected 4 arguments but got 5 arguments.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward5.stan
Semantic error in 'bad_forward5.stan', line 40, column 32 to column 56:
   -------------------------------------------------
    38:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
    39:                      theta_0,
    40:                      K_function, (x, n_obs, alpha, {rho}));
                                         ^
    41:  }
   -------------------------------------------------

Cannot call 'K_function' with arguments forwarded from call to
'laplace_latent_rng':
The fourth argument must be real but got array[] real.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward6.stan
Semantic error in 'bad_forward6.stan', line 50, column 43 to column 54:
   -------------------------------------------------
    48:  
    49:  generated quantities {
    50:    vector[n_obs] theta = laplace_latent_rng(ll_function, (1,1, log_ye, y),
                                                    ^
    51:                      theta_0,
    52:                      K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

No unique minimum promotion found for function 'll_function'.
Overloaded functions must not have multiple equally valid promotion paths.
This function has several:
(vector, int, real, vector, array[] int) => real
(vector, real, int, vector, array[] int) => real
Consider defining a new signature for the exact types needed or
re-thinking existing definitions.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward7.stan
Semantic error in 'bad_forward7.stan', line 2, column 12 to column 66:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol_neg_binomial_2_log_lpmf(1 | 1, 1);
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_tol_neg_binomial_2_log_lpmf'
for the likelihood:
The first argument must be array[] int but got int.
Expected the arguments to start with:
(array[] int, array[] int, vector)
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward8.stan
Semantic error in 'bad_forward8.stan', line 2, column 2 to column 52:
   -------------------------------------------------
     1:  model {
     2:    1 ~ laplace_marginal_tol_neg_binomial_2_log(1, 1);
           ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_tol_neg_binomial_2_log_lupmf'
for the likelihood:
The first argument must be array[] int but got int.
Expected the arguments to start with:
(array[] int, array[] int, vector)
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward9.stan
Semantic error in 'bad_forward9.stan', line 39, column 32 to column 54:
   -------------------------------------------------
    37:    target += laplace_marginal(ll_function, (eta, log_ye, y),
    38:                      theta_0,
    39:                      K_function, (x, n_obs, alpha, rho));
                                         ^
    40:  }
   -------------------------------------------------

Cannot call 'K_function' with arguments forwarded from call to
'laplace_marginal':
The fourth argument is marked data-only. (Local variables are assumed to
depend on parameters; same goes for function inputs unless they are marked
with the keyword 'data'.)
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_overload.stan
Semantic error in 'bad_overload.stan', line 2, column 7 to column 51:
   -------------------------------------------------
     1:  functions {
     2:    real laplace_marginal_tol_neg_binomial_2_log_lpmf(int y) {
                ^
     3:      return 1.0;
     4:    }
   -------------------------------------------------

Identifier 'laplace_marginal_tol_neg_binomial_2_log_lpmf' clashes with a non-overloadable Stan Math library function.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_theta0.stan
Semantic error in 'bad_theta0.stan', line 38, column 34 to column 41:
   -------------------------------------------------
    36:  model {
    37:    target += laplace_marginal(ll_function, (eta, log_ye, y),
    38:                                    theta_0,
                                           ^
    39:                                    K_function, (x, n_obs, alpha, rho));
    40:  }
   -------------------------------------------------

Initial guess argument to 'laplace_marginal' must be a vector.
Instead found type array[] real.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol1.stan
Semantic error in 'bad_tol1.stan', line 41, column 56 to column 57:
   -------------------------------------------------
    39:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
    40:                      theta_0,
    41:                      K_function, (x, n_obs, alpha, rho), 1);
                                                                 ^
    42:  }
   -------------------------------------------------

Recieved 1 extra argument at the end of the call to 'laplace_latent_rng'.
Did you mean to call the _tol version?
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol2.stan
Semantic error in 'bad_tol2.stan', line 40, column 56 to column 57:
   -------------------------------------------------
    38:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
    39:                      theta_0,
    40:                      K_function, (x, n_obs, alpha, rho), 1,2,3,4,5);
                                                                 ^
    41:  }
   -------------------------------------------------

Recieved 5 extra arguments at the end of the call to 'laplace_latent_rng'.
Did you mean to call the _tol version?
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol3.stan
Semantic error in 'bad_tol3.stan', line 40, column 56 to column 57:
   -------------------------------------------------
    38:    vector[n_obs] theta = laplace_latent_tol_rng(ll_function, (eta, log_ye, y),
    39:                      theta_0,
    40:                      K_function, (x, n_obs, alpha, rho), 1,2,3,4);
                                                                 ^
    41:  }
   -------------------------------------------------

Recieved 4 arguments at the end of the call to 'laplace_latent_tol_rng'.
Expected 5 arguments for the control parameters instead.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol4.stan
Semantic error in 'bad_tol4.stan', line 47, column 32 to column 35:
   -------------------------------------------------
    45:                                  theta_0,
    46:                                  K_function, (x, n_obs, alpha, rho),
    47:                                  eta, max_num_steps, hessian_block_size,
                                         ^
    48:                                  solver, max_steps_line_search);
    49:  }
   -------------------------------------------------

The control parameters to 'laplace_marginal_tol' must all be data-only,
but the first control parameter (tolerance) here is not. (Local variables are
assumed to depend on parameters; same goes for function inputs unless they
are marked with the keyword 'data'.)
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol5.stan
Semantic error in 'bad_tol5.stan', line 40, column 56 to column 57:
   -------------------------------------------------
    38:    vector[n_obs] theta = laplace_latent_tol_rng(ll_function, (eta, log_ye, y),
    39:                      theta_0,
    40:                      K_function, (x, n_obs, alpha, rho), 1,2,3,4,5.5);
                                                                 ^
    41:  }
   -------------------------------------------------

The fifth control parameter (max_steps_line_search) to 'laplace_latent_tol_rng'
must be int but got real.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol6.stan
Semantic error in 'bad_tol6.stan', line 40, column 56 to column 57:
   -------------------------------------------------
    38:    vector[n_obs] theta = laplace_latent_tol_rng(ll_function, (eta, log_ye, y),
    39:                      theta_0,
    40:                      K_function, (x, n_obs, alpha, rho), 1,2,3,4,5,6);
                                                                 ^
    41:  }
   -------------------------------------------------

Recieved 6 arguments at the end of the call to 'laplace_latent_tol_rng'.
Expected 5 arguments for the control parameters instead.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol7.stan
Semantic error in 'bad_tol7.stan', line 40, column 56 to column 57:
   -------------------------------------------------
    38:    vector[n_obs] theta = laplace_latent_tol_rng(ll_function, (eta, log_ye, y),
    39:                      theta_0,
    40:                      K_function, (x, n_obs, alpha, rho), 1,2,3,4.0,5);
                                                                 ^
    41:  }
   -------------------------------------------------

The fourth control parameter (solver) to 'laplace_latent_tol_rng' must be
int but got real.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol8.stan
Semantic error in 'bad_tol8.stan', line 40, column 56 to column 57:
   -------------------------------------------------
    38:    vector[n_obs] theta = laplace_latent_tol_rng(ll_function, (eta, log_ye, y),
    39:                      theta_0,
    40:                      K_function, (x, n_obs, alpha, rho), 1,2,3i,4,5);
                                                                 ^
    41:  }
   -------------------------------------------------

The third control parameter (hessian_block_size) to 'laplace_latent_tol_rng'
must be int but got complex.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol9.stan
Semantic error in 'bad_tol9.stan', line 40, column 56 to column 57:
   -------------------------------------------------
    38:    vector[n_obs] theta = laplace_latent_tol_rng(ll_function, (eta, log_ye, y),
    39:                      theta_0,
    40:                      K_function, (x, n_obs, alpha, rho), 1,{2},3,4,5);
                                                                 ^
    41:  }
   -------------------------------------------------

The second control parameter (max_num_steps) to 'laplace_latent_tol_rng'
must be int but got array[] int.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args1.stan
Semantic error in 'missing_args1.stan', line 2, column 12 to column 30:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal();
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal'.
The valid signature of this function is
laplace_marginal((vector, T_l...) => real, tuple(T_l...), vector,
  (T_k...) => matrix, tuple(T_k...))
However, we recieved the types:
()
We were unable to start more in-depth checking. Please ensure you are passing
enough arguments and that the first argument is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args2.stan
Semantic error in 'missing_args2.stan', line 2, column 12 to column 34:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol();
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_tol'.
The valid signature of this function is
laplace_marginal_tol((vector, T_l...) => real, tuple(T_l...), vector,
  (T_k...) => matrix, tuple(T_k...), data real, data int, data int, data int,
  data int)
However, we recieved the types:
()
We were unable to start more in-depth checking. Please ensure you are passing
enough arguments and that the first argument is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args3.stan
Semantic error in 'missing_args3.stan', line 2, column 12 to column 58:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol_neg_binomial_2_log_lpmf();
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_tol_neg_binomial_2_log_lpmf'
for the likelihood:
Expected 3 arguments but got 0 arguments.
Expected the arguments to start with:
(array[] int, array[] int, vector)
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args4.stan
Semantic error in 'missing_args4.stan', line 30, column 12 to line 31, column 42:
   -------------------------------------------------
    28:  }
    29:  model {
    30:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                     ^
    31:                                    theta_0);
    32:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal'.
The valid signature of this function is
laplace_marginal((vector, T_l...) => real, tuple(T_l...), vector,
  (T_k...) => matrix, tuple(T_k...))
However, we recieved the types:
((vector, real, vector, array[] int) => real,
  tuple(real, vector, array[] int), data vector)
Typechecking failed after checking the first 2 arguments. Please ensure you
are passing enough arguments and that the 4th is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args5.stan
Semantic error in 'missing_args5.stan', line 3, column 20 to column 40:
   -------------------------------------------------
     1:  
     2:  generated quantities {
     3:    vector[2] theta = laplace_latent_rng();
                             ^
     4:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_latent_rng'.
The valid signature of this function is
laplace_latent_rng((vector, T_l...) => real, tuple(T_l...), vector,
  (T_k...) => matrix, tuple(T_k...))
However, we recieved the types:
()
We were unable to start more in-depth checking. Please ensure you are passing
enough arguments and that the first argument is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args6.stan
Semantic error in 'missing_args6.stan', line 40, column 22 to line 41, column 14:
   -------------------------------------------------
    38:  generated quantities {
    39:  
    40:  vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
                               ^
    41:        theta_0);
    42:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_latent_rng'.
The valid signature of this function is
laplace_latent_rng((vector, T_l...) => real, tuple(T_l...), vector,
  (T_k...) => matrix, tuple(T_k...))
However, we recieved the types:
(data (vector, real, vector, array[] int) => real,
  tuple(real, vector, array[] int), data vector)
Typechecking failed after checking the first 2 arguments. Please ensure you
are passing enough arguments and that the 4th is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args7.stan
Semantic error in 'missing_args7.stan', line 18, column 24 to line 19, column 30:
   -------------------------------------------------
    16:  generated quantities {
    17:  
    18:    vector[n_obs] theta = laplace_latent_neg_binomial_2_log_rng(y, {1}, [1.0]',
                                 ^
    19:                        theta_0);
    20:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_latent_neg_binomial_2_log_rng'.
The valid signature of this function is
laplace_latent_neg_binomial_2_log_rng(array[] int, array[] int, vector,
  vector, (T_k...) => matrix, tuple(T_k...))
However, we recieved the types:
(data array[] int, data array[] int, data vector, data vector)
Typechecking failed after checking the first 3 arguments. Please ensure you
are passing enough arguments and that the 5th is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args8.stan
Semantic error in 'missing_args8.stan', line 2, column 12 to column 59:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol_poisson_log_lpmf({1}, {1});
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_tol_poisson_log_lpmf'.
The valid signature of this function is
laplace_marginal_tol_poisson_log_lpmf(array[] int, array[] int, vector,
  (T_k...) => matrix, tuple(T_k...), data real, data int, data int, data int,
  data int)
However, we recieved the types:
(data array[] int, data array[] int)
Typechecking failed after checking the first 2 arguments. Please ensure you
are passing enough arguments and that the 4th is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args9.stan
Semantic error in 'missing_args9.stan', line 40, column 24 to line 41, column 67:
   -------------------------------------------------
    38:  generated quantities {
    39:  
    40:    vector[n_obs] theta = laplace_latent_tol_neg_binomial_2_log_rng(y, {1}, [1.0]',
                                 ^
    41:                        theta_0,  K_function, (x, n_obs, alpha, rho));
    42:  
   -------------------------------------------------

Recieved 0 argument at the end of the call to 'laplace_latent_tol_neg_binomial_2_log_rng'.
Expected 5 arguments for the control parameters instead.
[exit 1]
